2010-03-24  Juanma Barranquero  <lekktu@gmail.com>

	* message.el (message-interactive): Doc fix.
	(message-qmail-inject-args): Reflow.
	(message-kill-to-signature): Fix typo in docstring.

	* smiley.el (smiley-buffer): Fix typo in docstring.

2010-03-24  Glenn Morris  <rgm@gnu.org>

	* mail-source.el (gnus-message): Declare.
	(mail-source-delete-old-incoming): Require gnus-util.

2010-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (canlock-verify): Autoload it for Emacs 21.

	* message.el (ecomplete-setup): Autoload it for Emacs <23.

	* mml-sec.el (mml-secure-cache-passphrase): Default to t that is
	password-cache's default if it is not bound.
	(mml-secure-passphrase-cache-expiry): Default to 16 that is
	password-cache-expiry's default if it is not bound.

	* pop3.el (pop3-list): Don't use 3rd arg of `split-string' which is not
	available in Emacs 21.

2010-03-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources): Fix up definition so extra parameters
	are always inline.

2010-03-22  Martin Stjernholm  <mast@lysator.liu.se>

	* nnimap.el (nnimap-verify-uidvalidity): Fixed bug where uidvalidity
	wasn't updated after mismatch.  Clear cached mailbox info correctly
	when uidvalidity changes.
	(nnimap-group-prefixed-name): New function to avoid some code
	duplication.
	(nnimap-verify-uidvalidity, nnimap-group-overview-filename)
	(nnimap-request-group): Use it.
	(nnimap-retrieve-groups, nnimap-verify-uidvalidity)
	(nnimap-update-unseen): Significantly improved speed of Gnus startup
	with many imap folders.  This is done by caching the group status from
	the imap server persistently in a group parameter `imap-status'. (This
	was cached before too if `nnimap-retrieve-groups-asynchronous' was set,
	but not persistently, so every Gnus startup was still very slow.)

2010-03-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Set up autoloads.  Bump to 23.2 because of the
	secrets.el dependency.